# yc-node

./: README.md
.github/workflows/: test.yml
docs/: site-test-guide.md  test-guide.md
pallets/name-service/: Cargo.toml
pallets/name-service/src/: lib.rs
pallets/note/: Cargo.toml
pallets/note/src/: lib.rs  tests.rs
pallets/site/: Cargo.toml
pallets/site/src/: lib.rs  tests.rs
runtime/: Cargo.toml
runtime/src/: lib.rs
